# rtdata_sdk

./: .gitignore  CHANGELOG.md  CHANGELOG_0.1.1.md  CHANGELOG_0.1.2.md  CHANGELOG_0.1.3.md  DELIVERY.md  DEVELOPMENT.md  README.md  TOKEN_EXCHANGE_CARDS.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: SDK_USAGE.md  TOKEN_STATUS.md
examples/: basic_usage.py  diagnose_realtime_stall.py  finance_query.py  history_adjust.py  history_kline.py  subscribe_aliyun.py  subscribe_realtime.py  test_delay.py  test_latency.py  test_subscribe.py  test_subscribe2.py  token_status.py
rtdata/: __init__.py  _connection.py  _discovery.py  _history_segment_cache.py  _protocol.py  _symbol_map.py  api.py  client.py  exceptions.py  models.py
tests/: test_reconnect_state_machine.py  test_token_status.py
tests/fixtures/: token_status_v1.json
